--- a/HelloWorld/css/paintcoat.css
+++ b/HelloWorld/css/paintcoat.css
@@ -35,11 +35,11 @@ nav {
     text-align: center;
     font-weight: 600;
 }
-@media (min-width: 0px) {
-    .numButton {
-        display: none;
-    }
-}
+//@media (min-width: 0px) {
+//    .numButton {
+//        display: none;
+//    }
+//}
 @media (min-width: 400px) {
     .numButton {
         display: block;
